--- a/index.html
+++ b/index.html
@@ -135,8 +135,12 @@
   </div>
 
   <button class="subscribe-btn" onclick="window.open('https://www.youtube.com/@noahliNotFound', '_blank');">
-    My Channel
-  </button>
+  My Channel
+</button>
+
+<button class="subscribe-btn" style="top: 70%;" onclick="window.open('https://discord.gg/qp6uf4K4FE', '_blank');">
+  My Discord Server
+</button>
 
   <script>
     const matrixCanvas = document.getElementById("matrix");
